1-7 How to Monitor AWS ECS Fargate Performance/MD/SpringbootDemoServiceSecurityGroup.json
{
    "SecurityGroups": [
        {
            "Description": "2023-01-01T12:34:34.932Z",
            "GroupName": "SpringbootDemoServiceSecurityGroup",
            "IpPermissions": [
                {
                    "FromPort": 9999,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 9999,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-09ceae700dfd78c27",
                            "UserId": "475322830297"
                        }
                    ]
                }
            ],
            "OwnerId": "475322830297",
            "GroupId": "sg-06d9d820cdc705f87",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "VpcId": "vpc-03010043918dfa803"
        }
    ]
}
