1-7 How to Monitor AWS ECS Fargate Performance/MD/SprintbootDemoALBSecurityGroup.json
{
    "SecurityGroups": [
        {
            "Description": "SprintbootDemoALBSecurityGroup",
            "GroupName": "SprintbootDemoALBSecurityGroup",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "475322830297",
            "GroupId": "sg-09ceae700dfd78c27",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "VpcId": "vpc-03010043918dfa803"
        }
    ]
}
